--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>entities</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.senlainc.git-courses</groupId>
+            <artifactId>dto</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
