--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,6 +19,11 @@
             <version>1.0</version>
         </dependency>
         <dependency>
+            <groupId>com.senlainc.git-courses</groupId>
+            <artifactId>dto</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.6.1</version>
