Удалены csvReader и csvWriter, произведен рефакторинг сервисов, контроллеров, dao. Подключен Swagger.

--- a/dto/pom.xml
+++ b/dto/pom.xml
@@ -11,11 +11,17 @@
 
     <artifactId>dto</artifactId>
     <dependencies>
+        <!--swagger-->
         <dependency>
-            <groupId>com.senlainc.git-courses</groupId>
-            <artifactId>entities</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
         </dependency>
     </dependencies>
 
