--- a/service/pom.xml
+++ b/service/pom.xml
@@ -39,6 +39,12 @@
             <version>5.1.9.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.2.0.RELEASE</version>
+        </dependency>
 
     </dependencies>
     <properties>
